fixed clear search btn alignment

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,7 +42,7 @@ list-detail-app {
 
             .clear {
                 vertical-align: middle;
-                padding: 7px 15px;
+                padding: 9px 15px;
                 cursor: pointer;
                 opacity: .5;
             }
